# boost_python_execises

./: .gitignore  CMakeLists.txt
fnb/: CMakeLists.txt  fnb.cpp  fnb.py
